--- a/.gitignore
+++ b/.gitignore
@@ -1,46 +1,52 @@
-.DS_Store
-.AppleDouble
-.LSOverride
-
-.idea/
-cmake-build-*/
+# ===================================================================
+# General & OS-specific
+# 忽略所有目录下的 macOS 和 Windows 系统文件
+# ===================================================================
+**/.DS_Store
+**/.AppleDouble
+**/.LSOverride
+**/Thumbs.db
+**/ehthumbs.db
+**/Desktop.ini
 
 # ===================================================================
-# Build outputs & Dependencies
+# IDE Specific
+# 忽略所有子目录下的 IDE 配置文件 (例如 Java/my-project/.idea/)
 # ===================================================================
+**/.idea/
+**/.vscode/
+**/cmake-build-*/
+
+# ===================================================================
+# Build outputs, Dependencies & Logs
+# 忽略所有子目录下的编译产物、依赖和日志文件
+# ===================================================================
+
 # Java / Maven / Gradle
-target/
-build/
-*.class
-*.jar
-*.war
-*.ear
-hs_err_pid*
+**/target/
+**/build/
+**/*.class
+**/*.jar
+**/*.war
+**/*.ear
 
 # C/C++
-*.o
-*.out
-*.exe
-*.dll
-*.so
+**/*.o
+**/*.out
+**/*.exe
+**/*.dll
+**/*.so
 
-# Python
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
+# Python (in case you add it later)
+**/__pycache__/
+**/*.pyc
+**/*.pyo
+**/*.pyd
+**/env/
+**/venv/
 
-# Node.js
-node_modules/
-npm-debug.log*
-yarn-error.log*
-
-# ===================================================================
-# Log files & Temporary files
-# ===================================================================
-*.log
-*.tmp
-*.temp
+# Logs & Temporary files
+**/*.log
+**/*.tmp
+**/*.temp
+**/hs_err_pid*
