--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@
 # 忽略所有子目录下的 IDE 配置文件 (例如 Java/my-project/.idea/)
 # ===================================================================
 **/.idea/
-**/.vscode/
+**/.cache/
 **/cmake-build-*/
 
 # ===================================================================
